DEMO_PHASE/one/manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: innoura/demo-app-one
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
        - name: envoy
          image: envoyproxy/envoy:v1.26.0
          args:
            - "-c"
            - "/etc/envoy/envoy.yaml"
            - "--log-level"
            - "debug"
          ports:
            - containerPort: 8888
            - containerPort: 15001
            - containerPort: 9901
          securityContext:
            runAsUser: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: envoy-config-volume
              mountPath: /etc/envoy
              readOnly: true
            - name: envoy-logs
              mountPath: /logs
      volumes:
        - name: envoy-config-volume
          configMap:
            name: app-one-envoy-config
        - name: envoy-logs
          emptyDir: {}
