DEMO_PHASE/one/manifest/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-one-route
spec:
  to:
    kind: Service
    name: app-one-service
  port:
    targetPort: envoy-inbound
  tls:
    termination: edge
